--- a/whats-in-a-name.cabal
+++ b/whats-in-a-name.cabal
@@ -16,6 +16,7 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lib
+  ghc-options:         -Wall
   build-depends:       base >= 4.7 && < 5
                      , text
                      , transformers
@@ -27,7 +28,7 @@ library
 executable whats-in-a-name
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , whats-in-a-name
   default-language:    Haskell2010
